force-app/main/default/objects/Case/fields/CC_Fecha_Traslado_2N__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Traslado_2N__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Traslado 2N</label>
    <type>DateTime</type>
</CustomField>