force-app/main/default/objects/Case/fields/CC_Fecha_Traslado_Colaborador__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Traslado_Colaborador__c</fullName>
    <description>Fecha en la que se realiza el traslado a colaborador para report de Stores.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Traslado Colaborador</label>
    <type>DateTime</type>
</CustomField>