force-app/main/default/objects/Case/fields/CC_Fecha_traslado_incidencia__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_traslado_incidencia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha traslado incidencia</label>
    <type>DateTime</type>
</CustomField>