force-app/main/default/objects/Case/fields/CC_Fecha_Twitter_Entrante__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Twitter_Entrante__c</fullName>
    <description>Fecha que se informa y actualiza con cada twitter entrante del caso</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Twitter Entrante</label>
    <type>DateTime</type>
</CustomField>