force-app/main/default/objects/Case/fields/CC_Fecha_Ultima_Interaccion__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Ultima_Interaccion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha última interacción</label>
    <type>DateTime</type>
</CustomField>