force-app/main/default/objects/Case/fields/CC_Fecha_Ultima_Reclamacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Ultima_Reclamacion__c</fullName>
    <description>Fecha en la que se ha hecho la última reclamación</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha última reclamación</label>
    <type>DateTime</type>
</CustomField>