force-app/main/default/objects/Case/fields/CC_FechaSLAsinEstados__c.field-meta.xml
<CustomField>
    <fullName>CC_FechaSLAsinEstados__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fechas SLA sin estados</label>
    <length>100</length>
    <type>Text</type>
</CustomField>