force-app/main/default/objects/Case/fields/CC_FechasSLA__c.field-meta.xml
<CustomField>
    <fullName>CC_FechasSLA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fechas Sla</label>
    <length>200</length>
    <type>Text</type>
</CustomField>