force-app/main/default/objects/Case/fields/CC_Fin_Pendiente_Incidencia__c.field-meta.xml
<CustomField>
    <fullName>CC_Fin_Pendiente_Incidencia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fin Pendiente Incidencia</label>
    <type>DateTime</type>
</CustomField>