force-app/main/default/objects/Case/fields/CC_Firma__c.field-meta.xml
<CustomField>
    <fullName>CC_Firma__c</fullName>
    <description>Firma para cada pagina del pdf que generamos</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Firma</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>