force-app/main/default/objects/Case/fields/CC_Footer__c.field-meta.xml
<CustomField>
    <fullName>CC_Footer__c</fullName>
    <description>Pie de página de cada página del pdf que creamos</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Footer</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>