force-app/main/default/objects/Case/fields/CC_Franja_Horaria_Aux__c.field-meta.xml
<CustomField>
    <fullName>CC_Franja_Horaria_Aux__c</fullName>
    <formula>HOUR(TIMEVALUE(CreatedDate+CC_GMT_Data__c/24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Franja Horaria Aux</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>