force-app/main/default/objects/Case/fields/CC_Grupo_3N__c.field-meta.xml
<CustomField>
    <fullName>CC_Grupo_3N__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grupo de 3N</label>
    <length>255</length>
    <type>Text</type>
</CustomField>