force-app/main/default/objects/Case/fields/CC_Grupo_Colaborador__c.field-meta.xml
<CustomField>
    <fullName>CC_Grupo_Colaborador__c</fullName>
    <description>Nos guardamos el grupo colaborador al que se traslada para reporting</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Grupo Colaborador</label>
    <length>150</length>
    <type>Text</type>
</CustomField>