force-app/main/default/objects/Case/fields/CC_Grupo_Resolutor__c.field-meta.xml
<CustomField>
    <fullName>CC_Grupo_Resolutor__c</fullName>
    <formula>IF(
ISBLANK(Owner:User.Id), /* If blank, it&apos;s a queue */
&quot;&quot;,
UPPER(Owner:User.CompanyName)
)</formula>
    <label>Grupo Resolutor</label>
    <type>Text</type>
</CustomField>