force-app/main/default/objects/Case/fields/CC_Header__c.field-meta.xml
<CustomField>
    <fullName>CC_Header__c</fullName>
    <description>Encabezado para cada pagina del pdf que generamos</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Header</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>