force-app/main/default/objects/Case/fields/CC_Id_CAU_Bankia__c.field-meta.xml
<CustomField>
    <fullName>CC_Id_CAU_Bankia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Código Problema</label>
    <length>20</length>
    <type>Text</type>
</CustomField>