force-app/main/default/objects/Case/fields/CC_IdentCliente__c.field-meta.xml
<CustomField>
    <fullName>CC_IdentCliente__c</fullName>
    <defaultValue>&apos;0&apos;</defaultValue>
    <description>Tipo de identificación del cliente asociado al caso</description>
    <inlineHelpText>Tipo de identificación del cliente asociado al caso</inlineHelpText>
    <label>Identificación cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_IdentCliente</valueSetName>
    </valueSet>
</CustomField>