force-app/main/default/objects/Case/fields/CC_Idioma__c.field-meta.xml
<CustomField>
    <fullName>CC_Idioma__c</fullName>
    <label>Idioma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Codigo_Idioma</valueSetName>
    </valueSet>
</CustomField>