force-app/main/default/objects/Case/fields/CC_Importe_Abonado__c.field-meta.xml
<CustomField>
    <fullName>CC_Importe_Abonado__c</fullName>
    <label>Importe abonado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>