force-app/main/default/objects/Case/fields/CC_Importe_Reclamado__c.field-meta.xml
<CustomField>
    <fullName>CC_Importe_Reclamado__c</fullName>
    <label>Importe reclamado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>