force-app/main/default/objects/Case/fields/CC_Info_Denegacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Info_Denegacion__c</fullName>
    <description>En este campo se almacena la información a mostrar en el apartado Journey Cognitive del caso.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Información Denegación</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>