force-app/main/default/objects/Case/fields/CC_Inicio_Pendiente_Cliente__c.field-meta.xml
<CustomField>
    <fullName>CC_Inicio_Pendiente_Cliente__c</fullName>
    <description>Campo que contiene la fecha en la que se ha hecho una petición de información y el caso ha cambiado de activo a pendiente cliente</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CC_Inicio_Pendiente_Cliente</label>
    <type>DateTime</type>
</CustomField>