force-app/main/default/objects/Case/fields/CC_Inicio_Pendiente_Incidencia__c.field-meta.xml
<CustomField>
    <fullName>CC_Inicio_Pendiente_Incidencia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inicio Pendiente Incidencia</label>
    <type>DateTime</type>
</CustomField>