force-app/main/default/objects/Case/fields/CC_MailTelfNotif__c.field-meta.xml
<CustomField>
    <fullName>CC_MailTelfNotif__c</fullName>
    <description>Dirección email / teléfono para realizar la notificación de seguimiento</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Dirección email / teléfono para realizar la notificación de seguimiento</inlineHelpText>
    <label>Email / Teléfono notificación</label>
    <length>80</length>
    <type>Text</type>
</CustomField>