force-app/main/default/objects/Case/fields/CC_Matricula_Empleado__c.field-meta.xml
<CustomField>
    <fullName>CC_Matricula_Empleado__c</fullName>
    <formula>IF (ContactId != null, Contact.CC_Matricula__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matricula Empleado</label>
    <type>Text</type>
</CustomField>