force-app/main/default/objects/Case/fields/CC_MCC_Motivo__c.field-meta.xml
<CustomField>
    <fullName>CC_MCC_Motivo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Motivo del caso</description>
    <inlineHelpText>Motivo del caso</inlineHelpText>
    <label>Motivo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_MCC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>C - Motivo</value>
        </filterItems>
        <filterItems>
            <field>$Source.CC_MCC_ProdServ__c</field>
            <operation>equals</operation>
            <valueField>CC_MCC__c.CC_Producto_Servicio__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>