force-app/main/default/objects/Case/fields/CC_MCC_Plantilla__c.field-meta.xml
<CustomField>
    <fullName>CC_MCC_Plantilla__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plantilla MCC</label>
    <length>250</length>
    <type>Text</type>
</CustomField>