force-app/main/default/objects/Case/fields/CC_MCC_ProdServ__c.field-meta.xml
<CustomField>
    <fullName>CC_MCC_ProdServ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Producto / Servicio del caso</description>
    <inlineHelpText>Producto / Servicio del caso</inlineHelpText>
    <label>Producto/Servicio</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_MCC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>B - Producto/Servicio</value>
        </filterItems>
        <filterItems>
            <field>$Source.CC_MCC_Tematica__c</field>
            <operation>equals</operation>
            <valueField>CC_MCC__c.CC_Tematica__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Cases (Referéncia Externa Producto/Servicio)</relationshipLabel>
    <relationshipName>ProdServ</relationshipName>
    <type>Lookup</type>
</CustomField>