force-app/main/default/objects/Case/fields/CC_MCC_Solucion__c.field-meta.xml
<CustomField>
    <fullName>CC_MCC_Solucion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solución</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_MCC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Solución</value>
        </filterItems>
        <filterItems>
            <field>$Source.CC_MCC_Causa__c</field>
            <operation>equals</operation>
            <valueField>CC_MCC__c.CC_Causa__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Cases (Solución)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>