force-app/main/default/objects/Case/fields/CC_MCC_Tematica__c.field-meta.xml
<CustomField>
    <fullName>CC_MCC_Tematica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Temática del caso</description>
    <inlineHelpText>Temática del caso</inlineHelpText>
    <label>Temática</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_MCC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>A - Temática</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Cases (Temática)</relationshipLabel>
    <relationshipName>Tematica</relationshipName>
    <type>Lookup</type>
</CustomField>