force-app/main/default/objects/Case/fields/CC_Mostrar_Componente_Contacto__c.field-meta.xml
<CustomField>
    <fullName>CC_Mostrar_Componente_Contacto__c</fullName>
    <formula>IF(NOT(ISBLANK(CC_Representante__c)), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mostrar componente contacto</label>
    <type>Checkbox</type>
</CustomField>