force-app/main/default/objects/Case/fields/CC_Mostrar_Componente_Representante__c.field-meta.xml
<CustomField>
    <fullName>CC_Mostrar_Componente_Representante__c</fullName>
    <formula>IF(NOT(ISBLANK(ContactId)), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mostrar componente representante</label>
    <type>Checkbox</type>
</CustomField>