force-app/main/default/objects/Case/fields/CC_Motivo__c.field-meta.xml
<CustomField>
    <fullName>CC_Motivo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Motivo (interno)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>