force-app/main/default/objects/Case/fields/CC_Motivo_Derivacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Motivo_Derivacion__c</fullName>
    <description>Motivo de la derivación KPI Agente</description>
    <label>Motivo de la derivación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Por KO autenticación</fullName>
            </value>
            <value>
                <fullName>Por limitación de protocolo</fullName>
            </value>
            <value>
                <fullName>Resto derivación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>