force-app/main/default/objects/Case/fields/CC_Motivo_NOK_Tarjetas__c.field-meta.xml
<CustomField>
    <fullName>CC_Motivo_NOK_Tarjetas__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Motivo NOK Tarjetas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>