force-app/main/default/objects/Case/fields/CC_Motivo_Valoracion__c.field-meta.xml
<CustomField>
    <fullName>CC_Motivo_Valoracion__c</fullName>
    <description>Se crea para proyectos relacionados a GENiaL</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Motivo de la valoración</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>