force-app/main/default/objects/Case/fields/CC_Nivel_Flag__c.field-meta.xml
<CustomField>
    <fullName>CC_Nivel_Flag__c</fullName>
    <formula>IF( CC_En_Tercer_Nivel__c = TRUE,
IMAGE(&quot;/resource/CC_Icono_Nivel_3&quot;, &quot;Nivel 3&quot;, 16, 16),
IMAGE(&quot;/resource/CC_Icono_Nivel_1&quot;, &quot;Nivel 1&quot;, 16, 16))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nivel</label>
    <type>Text</type>
</CustomField>