force-app/main/default/objects/Case/fields/CC_No_Facturable__c.field-meta.xml
<CustomField>
    <fullName>CC_No_Facturable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Caso que cumple los requisitos para ser facturable</description>
    <label>No Facturable</label>
    <type>Checkbox</type>
</CustomField>