force-app/main/default/objects/Case/fields/CC_No_Identificado__c.field-meta.xml
<CustomField>
    <fullName>CC_No_Identificado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que se pone a true si el cliente no se ha querido identificar.</description>
    <label>No identificado</label>
    <type>Checkbox</type>
</CustomField>