force-app/main/default/objects/Case/fields/CC_NoRespondido__c.field-meta.xml
<CustomField>
    <fullName>CC_NoRespondido__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Utilizado para marcar cuando una operativa no ha sido respondida por el empleado</description>
    <label>No respondido</label>
    <type>Checkbox</type>
</CustomField>