force-app/main/default/objects/Case/fields/CC_Notif_Cont_Inter__c.field-meta.xml
<CustomField>
    <fullName>CC_Notif_Cont_Inter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para controlar si se ha enviado la notificación de contacto intermedio a los 6 días.</description>
    <label>Notificación Contacto Intermedio</label>
    <type>Checkbox</type>
</CustomField>