force-app/main/default/objects/Case/fields/CC_NotIncidencia__c.field-meta.xml
<CustomField>
    <fullName>CC_NotIncidencia__c</fullName>
    <description>Indicador del estado de envío de la notificación de incidencia</description>
    <inlineHelpText>Indicador del estado de envío de la notificación de incidencia</inlineHelpText>
    <label>Notificar incidencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_EstadoEnvioNotif</valueSetName>
    </valueSet>
</CustomField>