force-app/main/default/objects/Case/fields/CC_Numero_Caso__c.field-meta.xml
<CustomField>
    <fullName>CC_Numero_Caso__c</fullName>
    <description>Referencia externa para el batch de reversión de ImaginBank.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Número Caso (referencia interna)</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>