force-app/main/default/objects/Case/fields/CC_Numero_Contrato__c.field-meta.xml
<CustomField>
    <fullName>CC_Numero_Contrato__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Número Contrato</label>
    <length>20</length>
    <type>Text</type>
</CustomField>