force-app/main/default/objects/Case/fields/CC_Numero_Documento__c.field-meta.xml
<CustomField>
    <fullName>CC_Numero_Documento__c</fullName>
    <description>Número de documento de identidad proporcionado para la creación del caso</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Número de documento de identidad proporcionado para la creación del caso</inlineHelpText>
    <label>Número de documento</label>
    <length>14</length>
    <type>Text</type>
</CustomField>