force-app/main/default/objects/Case/fields/CC_Numero_Empleado__c.field-meta.xml
<CustomField>
    <fullName>CC_Numero_Empleado__c</fullName>
    <formula>Owner:User.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número empleado</label>
    <type>Text</type>
</CustomField>