force-app/main/default/objects/Case/fields/CC_Numero_Reclamaciones_Cliente__c.field-meta.xml
<CustomField>
    <fullName>CC_Numero_Reclamaciones_Cliente__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Número de reclamaciones realizadas por el cliente.</description>
    <label>Número de reclamaciones de cliente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>