force-app/main/default/objects/Case/fields/CC_Numero_Reclamaciones_Tras_Colab__c.field-meta.xml
<CustomField>
    <fullName>CC_Numero_Reclamaciones_Tras_Colab__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Numero de reclamaciones realizas a un colaborador.</description>
    <label>Numero Reclamaciones Tras. Colab.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>