force-app/main/default/objects/Case/fields/CC_NumeroCasoOrigenRep__c.field-meta.xml
<CustomField>
    <fullName>CC_NumeroCasoOrigenRep__c</fullName>
    <description>Campo para vincular el caso origen de la repetitividad</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Numero de caso origen repetitividad</label>
    <length>50</length>
    <type>Text</type>
</CustomField>