force-app/main/default/objects/Case/fields/CC_NumPerso__c.field-meta.xml
<CustomField>
    <fullName>CC_NumPerso__c</fullName>
    <description>NumPerso proporcionado en la creación del caso</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>NumPerso proporcionado en la creación del caso</inlineHelpText>
    <label>NumPerso</label>
    <length>15</length>
    <type>Text</type>
</CustomField>