force-app/main/default/objects/Case/fields/CC_Oficina__c.field-meta.xml
<CustomField>
    <fullName>CC_Oficina__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oficina</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Centro CaixaBank</value>
        </filterItems>
        <filterItems>
            <field>Account.CC_Numero_Empresa__c</field>
            <operation>equals</operation>
            <value>001</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>