force-app/main/default/objects/Case/fields/CC_Oficina_afectada__c.field-meta.xml
<CustomField>
    <fullName>CC_Oficina_afectada__c</fullName>
    <description>Oficina afectada en el caso</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Número Oficina Afectada</label>
    <length>5</length>
    <type>Text</type>
</CustomField>