force-app/main/default/objects/Case/fields/CC_Oficina_Afectada_Lookup__c.field-meta.xml
<CustomField>
    <fullName>CC_Oficina_Afectada_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oficina afectada</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Centro CaixaBank</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Oficina Afectada)</relationshipLabel>
    <relationshipName>CasesLookup</relationshipName>
    <type>Lookup</type>
</CustomField>