force-app/main/default/objects/Case/fields/CC_Oportunidad_Creada__c.field-meta.xml
<CustomField>
    <fullName>CC_Oportunidad_Creada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si en el caso ya se ha creado una oportunidad con la operativa de derivar CSBD</description>
    <label>Oportunidad creada</label>
    <type>Checkbox</type>
</CustomField>