force-app/main/default/objects/Case/fields/CC_OTP_Bloqueo__c.field-meta.xml
<CustomField>
    <fullName>CC_OTP_Bloqueo__c</fullName>
    <formula>(((NOW() -  CC_OTP_Fecha_Ultima_Validacion__c)*24 &lt;24) &amp;&amp; CC_OTP_Valido__c = false &amp;&amp; CC_OTP_Intentos__c = 2) 
|| (((NOW() -  CC_OTP_Fecha_Ultima_Validacion__c)*24 &lt;168) &amp;&amp; CC_OTP_Valido__c = false &amp;&amp; CC_OTP_Intentos__c &gt;= 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bloqueo</label>
    <type>Checkbox</type>
</CustomField>