force-app/main/default/objects/Case/fields/CC_OTP_Fecha_Ultima_Validacion__c.field-meta.xml
<CustomField>
    <fullName>CC_OTP_Fecha_Ultima_Validacion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha última validación</label>
    <type>DateTime</type>
</CustomField>