force-app/main/default/objects/Case/fields/CC_OTP_Intentos__c.field-meta.xml
<CustomField>
    <fullName>CC_OTP_Intentos__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Intentos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>