force-app/main/default/objects/Case/fields/CC_OTP_Nivel__c.field-meta.xml
<CustomField>
    <fullName>CC_OTP_Nivel__c</fullName>
    <label>Nivel OTP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nivel 1</fullName>
            </value>
            <value>
                <fullName>Nivel 2</fullName>
            </value>
            <value>
                <fullName>Emergencia</fullName>
            </value>
            <value>
                <fullName>Cliente Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>