force-app/main/default/objects/Case/fields/CC_OTP_Valido__c.field-meta.xml
<CustomField>
    <fullName>CC_OTP_Valido__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para indicar si la identificación del OTP se ha realizado correctamente.</description>
    <label>OTP Válido</label>
    <type>Checkbox</type>
</CustomField>