force-app/main/default/objects/Case/fields/CC_Owner_Anterior__c.field-meta.xml
<CustomField>
    <fullName>CC_Owner_Anterior__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propietario anterior</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>