force-app/main/default/objects/Case/fields/CC_PAN_Encriptado__c.field-meta.xml
<CustomField>
    <fullName>CC_PAN_Encriptado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo interno para controlar que el pan se ha encriptado y no se vuelva a encriptar en el BU del caso.</description>
    <label>PAN Encriptado(interno)</label>
    <type>Checkbox</type>
</CustomField>