force-app/main/default/objects/Case/fields/CC_PieFirma__c.field-meta.xml
<CustomField>
    <fullName>CC_PieFirma__c</fullName>
    <description>Pie de firma para cada pagina del pdf que generamos</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pie Firma</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>