force-app/main/default/objects/Case/fields/CC_Politica_Seguridad_OK__c.field-meta.xml
<CustomField>
    <fullName>CC_Politica_Seguridad_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Política Seguridad OK</label>
    <type>Checkbox</type>
</CustomField>