force-app/main/default/objects/Case/fields/CC_Precio_Facturacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Precio_Facturacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Precio Facturación</label>
    <referenceTo>CBK_Precio_Facturacion__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>PrecioFacturacion</relationshipName>
    <type>Lookup</type>
</CustomField>