force-app/main/default/objects/Case/fields/CC_Precio_Facturar__c.field-meta.xml
<CustomField>
    <fullName>CC_Precio_Facturar__c</fullName>
    <label>Precio a Facturar</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>