force-app/main/default/objects/Case/fields/CC_Primer_DM_Enviado__c.field-meta.xml
<CustomField>
    <fullName>CC_Primer_DM_Enviado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primer DM enviado</label>
    <type>Checkbox</type>
</CustomField>