force-app/main/default/objects/Case/fields/CC_Primer_SocialPost_Id__c.field-meta.xml
<CustomField>
    <fullName>CC_Primer_SocialPost_Id__c</fullName>
    <description>Primer Social Post entrante</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primer Social Post Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>