force-app/main/default/objects/Case/fields/CC_Producto_Servicio__c.field-meta.xml
<CustomField>
    <fullName>CC_Producto_Servicio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Producto/Servicio (interno)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>