force-app/main/default/objects/Case/fields/CC_Provincia_Gestor__c.field-meta.xml
<CustomField>
    <fullName>CC_Provincia_Gestor__c</fullName>
    <formula>IF (ContactId != null, Account.CC_OficinaGestoraId__r.BillingState, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provincia Gestor</label>
    <type>Text</type>
</CustomField>