force-app/main/default/objects/Case/fields/CC_Rating__c.field-meta.xml
<CustomField>
    <fullName>CC_Rating__c</fullName>
    <formula>App_Reviews__r.Rating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valoración</label>
    <type>Text</type>
</CustomField>