force-app/main/default/objects/Case/fields/CC_Reactivado_Operativa__c.field-meta.xml
<CustomField>
    <fullName>CC_Reactivado_Operativa__c</fullName>
    <description>Determina si la reactivación del caso se ha hecho desde la operativa (de la pestaña del caso)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reactivado por operativa</label>
    <type>DateTime</type>
</CustomField>