force-app/main/default/objects/Case/fields/CC_Rechazado_No_Tabulado__c.field-meta.xml
<CustomField>
    <fullName>CC_Rechazado_No_Tabulado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para poder rechazar un caso sin que este tenga una clasificación, añadido a la Validation Rule &apos;CC_Rechazar_Caso_No_Tabulado&apos;</description>
    <label>Rechazado No Tabulado</label>
    <type>Checkbox</type>
</CustomField>