force-app/main/default/objects/Case/fields/CC_Rechazar_Reabrir_Caso__c.field-meta.xml
<CustomField>
    <fullName>CC_Rechazar_Reabrir_Caso__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rechazar o Reabrir Caso</label>
    <type>Checkbox</type>
</CustomField>