force-app/main/default/objects/Case/fields/CC_Recipient_Mail__c.field-meta.xml
<CustomField>
    <fullName>CC_Recipient_Mail__c</fullName>
    <formula>IF(RecordType.DeveloperName == &quot;CC_Empleado&quot;, Contact.Email,
			IF(AccountId!= null, Account.CC_Email__c,
						IF(ContactId!= null, Contact.Email, null)
			)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recipient Mail</label>
    <type>Text</type>
</CustomField>