force-app/main/default/objects/Case/fields/CC_Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Recipient_Name__c</fullName>
    <description>Calculamos el Recipient Name para las plantillas.</description>
    <formula>IF(ContactId != null, Contact.FirstName &amp; &quot; &quot; &amp; Contact.LastName, 
IF(CC_Social_Persona__c != null, CC_Social_Persona__r.Name, null)
)</formula>
    <label>Recipient Name</label>
    <type>Text</type>
</CustomField>