force-app/main/default/objects/Case/fields/CC_Recipient_Phone__c.field-meta.xml
<CustomField>
    <fullName>CC_Recipient_Phone__c</fullName>
    <formula>IF(RecordType.DeveloperName == &quot;CC_Empleado&quot;, Contact.Phone,
			IF(AccountId!= null, Account.Phone,
						IF(ContactId!= null, Contact.Phone, null)
			)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recipient Phone</label>
    <type>Text</type>
</CustomField>