force-app/main/default/objects/Case/fields/CC_Reclamacion_FCO__c.field-meta.xml
<CustomField>
    <fullName>CC_Reclamacion_FCO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox para saber si un caso de FCO ha sido reclamado o no</description>
    <label>Reclamación FCO</label>
    <type>Checkbox</type>
</CustomField>