force-app/main/default/objects/Case/fields/CC_Referencia_Correo_Saliente__c.field-meta.xml
<CustomField>
    <fullName>CC_Referencia_Correo_Saliente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referencia correo saliente</label>
    <length>33</length>
    <type>Text</type>
</CustomField>