force-app/main/default/objects/Case/fields/CC_RefExterna__c.field-meta.xml
<CustomField>
    <fullName>CC_RefExterna__c</fullName>
    <description>Referencia externa del caso</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Referencia externa del caso</inlineHelpText>
    <label>Referencia externa</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>